implement report search and edit

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "3.3.0",
     "react-select": "^3.0.8",
     "styled-components": "^4.4.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "use-debounce": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
